[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/entity/entity.gd" type="Script" id=1]
[ext_resource path="res://assets/shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/sprite-character.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "dash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:_height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 8.0, 0.0 ]
}

[node name="entity" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 0, 8 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="timer_dash" type="Timer" parent="."]

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 3 )
[connection signal="timeout" from="timer_dash" to="." method="_on_timer_dash_timeout"]
